--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://Manjuc21:$HF_TOKEN@huggingface.co/spaces/Manjuc21/PdfPwdExc main
+        run: git push --force https://Manjuc21:$HF_TOKEN@huggingface.co/spaces/Manjuc21/PdfPwdExc main
